--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -1,7 +1,7 @@
 {% load workbench_filter %}
 
-{% ifequal component.type 'appkit.powermedescription' %}
-    <div class="wui-powerme-container
+{% ifequal component.type 'appkit.redpacketdescription' %}
+    <div class="wui-red_packet-container
         {% if component.model.color %}
             {% if component.model.color == 'yellow' %} yellow {% else %}
               {% if component.model.color == 'orange' %} orange {% else %}
