发优惠券bdd实现补充-002

--- a/weapp/static_v2/js/view/mall_promotion_red_enevlop_view/template.html
+++ b/weapp/static_v2/js/view/mall_promotion_red_enevlop_view/template.html
@@ -15,7 +15,7 @@
 				{{/each}}
 			</select>
 		</div>
-	
+
 	</div>
 
 	<div class="xui-col disTc">
@@ -37,7 +37,7 @@
 			<input type="text" name="integral_upper" class="form-control integral" style="width:65px;"/>
 		</div>
 	</div>
-	
+
 
 	<div class="xui-col disTc">
 		<div class="xui-i-item">
@@ -45,7 +45,7 @@
 			<select id="status" name="status">
 				<option value="-1">全部</option>
 				<option value="0">取消关注</option>
-				<option value="1">关注</option>
+				<option value="1">已关注</option>
 			</select>
 		</div>
 		<div class="xui-i-item">
