--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -187,13 +187,17 @@
         W.Synchronizer.manualSync(function(page, data) {
             that.disabled = true;
           var descriptionModel = page.components[0].model;
-          console.log(descriptionModel);
           var name = descriptionModel.get('title');
           var startTime = descriptionModel.get('start_time')+":00";
           var endTime = descriptionModel.get('end_time')+":00";
           var relatedPageId = data['project_id'];
           var timing = descriptionModel.get('timing');
           var red_packet_type = descriptionModel.get('red_packet_type');
+          var random_total_money = descriptionModel.get('random_total_money');
+          var random_packets_number = descriptionModel.get('random_packets_number');
+          var regular_packets_number = descriptionModel.get('regular_packets_number');
+          var regular_per_money = descriptionModel.get('regular_per_money');
+          var money_range = descriptionModel.get('money_range');
           var reply_content = descriptionModel.get('reply_content');
           var material_image = descriptionModel.get('material_image');
           var share_description = descriptionModel.get('share_description');
@@ -203,7 +207,12 @@
             "start_time": startTime,
             "end_time": endTime,
             "timing": timing,
-            "red_packet_type": red_packet_type,
+            "type": red_packet_type,
+            "random_total_money": random_total_money,
+            "random_packets_number": random_packets_number,
+            "regular_packets_number": regular_packets_number,
+            "regular_per_money": regular_per_money,
+            "money_range": money_range,
             "reply_content": reply_content,
             "material_image": material_image,
             "share_description": share_description,
