--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -104,7 +104,7 @@
 				<th>结束时间</th>
 				<th>活动状态</th>
 				<th>参与人数</th>
-				<th>助力值总数</th>
+				<th>总金额</th>
 				<th>操作</th>
 			</tr>
 		</thead>
