--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -138,7 +138,7 @@
 					${item.participant_count}
 				</td>
 				<td>
-					${item.total_power}
+					${item.total_money}
 				</td>
 				<td>
 				    <a href="/apps/red_packet/red_packet_participances/?id=${item.id}" class="ml5" target="_blank">查看</a>
