--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -607,7 +607,7 @@
 									value="${component.model.get('regular_per_money')}"
 									data-field="regular_per_money"
 									placeholder="填写金额"/>元
-									<span style="color: #888;">每人可以领1个，金额随机且不超过总金额</span>
+									<span style="color: #888;">每人可以领1个，金额相同且不超过总金额</span>
 								<div class="errorHint"></div>
 							</div>
 						</div>
