补充feature：商品详情增加配送时间后台（需求）

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -223,6 +223,7 @@
 							<a target="_blank" href="/member/detail/?id=${ order.member_id }">{{html order.buyer_name}}</a>
 							<span class="xui-buyerHint xa-buyerHint pr">
 								<i class="xa-buyerHintImg"
+									data-delivery_time="${order.delivery_time}"
 									data-addr="${order.ship_address}"
 									data-tel="${order.ship_tel}"
 									data-message="${order.customer_message}"
@@ -514,6 +515,7 @@ $(document).ready(function() {
 			position:'top'
 		});
 
+		var delivery_time = $el.data('delivery_time');
 		var addr = $el.data('addr');
 		var tel = $el.data('tel');
 		var message = $el.data('message');
@@ -529,6 +531,7 @@ $(document).ready(function() {
 
 		buyerHintView.show({
 			$action: $el,
+			delivery_time: delivery_time,
 			addr: addr,
 			tel: tel,
 			message: message,
