--- a/weapp/static_v2/js/view/mall_order_buyer_hint_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_buyer_hint_view/template.html
@@ -1,4 +1,10 @@
 <script id="buyerHint-view" type="text/x-jquery-tmpl">
+
+	{{if delivery_time}}
+	<div><b>配送时间</b></div>
+	<div style="margin-left: 14px;">${delivery_time}</div>
+	{{/if}}
+
 	<div><b>收货地址</b></div>
 	<div style="margin-left: 14px;">${addr}</div>
 	<div style="margin-left: 14px;">电话：${tel}</div>
